--- a/src/docs/asciidoc/road-to-immutability/060-eventual.adoc
+++ b/src/docs/asciidoc/road-to-immutability/060-eventual.adoc
@@ -10,7 +10,7 @@ We start with the well-established _builder_ paradigm.
 .Example {counter:example}, static nested builder type
 [source,java]
 ----
-@E2Container
+@ImmutableContainer
 class Point {
     public final double x;
     public final double y;
@@ -21,17 +21,17 @@ class Point {
     }
 }
 
-@E2Container
+@ImmutableContainer
 class Polygon {
 
-    @E2Container
+    @ImmutableContainer
     public final List<Point> points;
 
     private Polygon(List<Point> points) { // <1>
         this.points = points;
     }
 
-    @E1Container(builds=Polygon.class)
+    @FinalFields(builds=Polygon.class)
     static class Builder {
 
         @Modified
@@ -50,7 +50,7 @@ class Polygon {
 }
 ----
 
-<1> The private constructor combined with the construction of an immutable copy in the `build` method guarantees level 2 immutability.
+<1> The private constructor combined with the construction of an immutable copy in the `build` method guarantees immutability.
 
 If your code can live with two different types (`Polygon.Builder`, `Polygon`) to represent polygons in their different stages (mutable, immutable), the builder paradigm is great.
 If, on the other hand, you want to hold polygons in a type that spans both stages of the polygon lifecycle, it becomes difficult to do this with an eye on immutability.
@@ -91,7 +91,7 @@ We propose a system of eventual immutability based on a single transition of sta
 .Example {counter:example}, state change in a boolean field
 [source,java]
 ----
-@E2Container(after="frozen")
+@ImmutableContainer(after="frozen")
 class SimpleImmutableSet1<T> {
     private final Set<T> set = new HashSet<>();
     private boolean frozen;
@@ -134,7 +134,7 @@ This example does not require an additional field, but relies on the empty/not-e
 .Example {counter:example}, state change going from empty to non-empty
 [source,java]
 ----
-@E2Container(after="set")
+@ImmutableContainer(after="set")
 class SimpleImmutableSet2<T> {
     private final Set<T> set = new HashSet<>();
 
@@ -168,7 +168,7 @@ Let us summarize the annotations:
 * The {only} annotation identifies methods that, because of their precondition, can only be executed without raising an exception before (when complemented with a `before="..."` parameter) or after (with a `after="..."` parameter) the transition.
 * The analyser computes the {testMark} annotation on methods which return the state as a boolean.
 There is a parameter to indicate that instead of returning `true` when the object is _after_, the method actually returns `true` on _before_.
-* Finally, the eventuality of the type shows in the `after="..."` parameter of {e1immutable}, {e2immutable} or their container versions.
+* Finally, the eventuality of the type shows in the `after="..."` parameter of {finalFields}, {immutable} or the shorthand {immutableContainer}.
 
 In each of these annotations, the actual value of the `...` in the `after=` or `before=` parameters is the name of the field.
 
@@ -193,7 +193,7 @@ Here, the `setFinal` method's {mark} annotation travels to the parameter, where 
 === Propagation
 
 The support types detailed in <<support-classes>> can be used as building blocks to make ever more complex eventually immutable classes.
-Effectively final fields of eventually immutable type will at some point hold objects that are in their final or `after` state, in which case they act as level 2 immutable fields.
+Effectively final fields of eventually immutable type will at some point hold objects that are in their final or `after` state, in which case they act as immutable fields.
 
 The analyser itself consists of many eventually immutable classes; we show some examples in <<in-the-analyser>>.
 
@@ -222,7 +222,7 @@ This situation must occur in a type with a {finalizer}, as explained in <<finali
 === Extensions of annotations
 
 When a type is eventually level 1 immutable, should the field(s) of the state transition be {variable} or {final}?
-Similarly, when a type is eventually level 2 immutable, should the analyser mark the initially mutable or assignable fields {modified} or {nm}?
+Similarly, when a type is eventually immutable, should the analyser mark the initially mutable or assignable fields {modified} or {nm}?
 
 Basically, we propose to mark with the end state, qualifying with the parameter `after`:
 
@@ -236,9 +236,9 @@ Basically, we propose to mark with the end state, qualifying with the parameter 
 Since in an IDE it is not too easy to have multiple visual markers, it seems best to use the same visuals as the end state.
 
 When a type is effectively level 1 immutable (not eventually), all fields are effectively final.
-The analyser wants to emphasise the rules needed to obtain (eventual) level 2 immutability, by clearly indicating which fields break the level 2 immutability rules.
+The analyser wants to emphasise the rules needed to obtain (eventual) immutability, by clearly indicating which fields break the immutability rules.
 
-Eventual finality simply adds a  `@Final(after="mark")` annotation to each of these situations.
+Eventual finality simply adds a `@Final(after="mark")` annotation to each of these situations.
 
 === Frameworks and contracts
 
@@ -251,7 +251,7 @@ The example below shows how this could be done for the `Verticle` interface of t
 .Example {counter:example}, excerpts and annotations of `Verticle.java` and `AbstractVerticle.java`
 [source]
 ----
-@E1Container(after = "init")
+@FinalFields(after = "init")
 interface Verticle {
 
     @Mark("init")
